--- a/SportsSideKick/app/src/sportsidekick/res/layout/popup_language.xml
+++ b/SportsSideKick/app/src/sportsidekick/res/layout/popup_language.xml
@@ -1,166 +1,142 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="@dimen/width_400"
-    android:layout_height="@dimen/height_400"
-    android:background="@drawable/popup_bottom_background"
-    android:orientation="vertical"
-    android:clickable="true">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@color/background_phone"
+    android:clickable="true"
+    android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/caption"
+    <RelativeLayout
+        android:id="@+id/top_toolbar"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/height_48"
-        android:gravity="center"
-        android:text="@string/choose_your_language"
-        android:textColor="?colorAccent" />
+        android:layout_height="@dimen/standard_button_height"
+        android:layout_alignParentTop="true"
+        android:background="@drawable/phone_background"
+        android:orientation="horizontal"
+        android:tileMode="repeat">
 
-    <View
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:text="@string/your_profile"
+            android:textColor="?white"
+            android:textStyle="bold" />
+
+        <RelativeLayout
+            android:id="@+id/back_button_holder"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent">
+
+            <ImageButton
+                android:id="@+id/close_dialog_button"
+                android:layout_width="@dimen/standard_button_height"
+                android:layout_height="@dimen/standard_button_height"
+                android:layout_alignParentStart="true"
+                android:adjustViewBounds="true"
+                android:background="@android:color/transparent"
+                android:scaleType="centerInside"
+                android:src="@drawable/ic_keyboard_arrow_left_black_24dp"
+                android:tint="@color/light_colorPrimaryLight"
+                android:visibility="gone" />
+        </RelativeLayout>
+    </RelativeLayout>
+    <!-- TOP BUTTONS CONTAINER -->
+    <LinearLayout
+        android:id="@+id/top_buttons_container"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/standard_button_height"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/top_toolbar"
+        android:background="@color/green_dark_5"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/your_profile_button"
+            android:layout_width="@dimen/space_0"
+            android:layout_height="match_parent"
+            android:layout_marginEnd="@dimen/margin_1"
+            android:layout_weight="1"
+            android:background="@color/background_phone"
+            android:gravity="center"
+            android:text="@string/profile"
+            android:textColor="?white" />
+
+        <TextView
+            android:id="@+id/your_wallet_button"
+            android:layout_width="@dimen/space_0"
+            android:layout_height="match_parent"
+            android:layout_marginEnd="@dimen/margin_1"
+            android:layout_weight="1"
+            android:background="@color/green_dark_phone_3"
+            android:gravity="center"
+            android:text="@string/wallet"
+            android:textColor="?white_semitransparent" />
+
+        <TextView
+            android:id="@+id/your_stash_button"
+            android:layout_width="@dimen/space_0"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:background="@color/green_dark_phone_3"
+            android:gravity="center"
+            android:text="@string/stash"
+            android:textColor="?white_semitransparent" />
+    </LinearLayout>
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="@dimen/height_2"
-        android:layout_alignParentTop="true"
-        android:background="?colorAccent" />
+        android:layout_below="@+id/top_toolbar"
+        android:orientation="horizontal">
 
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/height_2"
+            android:layout_weight="1"
+            android:background="?colorAccent" />
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/height_2"
+            android:layout_weight="1"
+            android:background="?colorPrimaryLight" />
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/height_2"
+            android:layout_weight="1"
+            android:background="?colorPrimaryLight" />
+    </LinearLayout>
+
+    <!--  TOP SPLITTER-->
     <View
         android:id="@+id/top_split_line"
         android:layout_width="match_parent"
         android:layout_height="@dimen/height_1"
-        android:layout_below="@+id/caption"
+        android:layout_below="@+id/top_buttons_container"
         android:background="@android:color/black" />
+    <TextView
+        android:id="@+id/chosen_language_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:text="@string/choose_your_language"
+        android:textColor="@color/white"
+        android:textSize="@dimen/font_size_12"
+        android:padding="@dimen/padding_8"
+        android:layout_below="@+id/top_split_line"/>
 
-    <RelativeLayout
-        android:id="@+id/language_recycler_view"
+    <base.app.util.ui.AutofitRecyclerView
+        android:id="@+id/auto_language_recycler_view"
+        android:layout_marginStart="@dimen/margin_15"
+        android:layout_marginEnd="@dimen/margin_15"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_above="@+id/bottom_buttons_container"
-        android:layout_below="@+id/caption"
-        android:layout_margin="@dimen/margin_20">
+        android:layout_below="@+id/chosen_language_text">
 
-        <ImageView
-            android:id="@+id/english_background"
-            android:layout_width="@dimen/popup_language_image_element_size"
-            android:layout_height="@dimen/popup_language_image_element_size"
-            android:layout_alignParentStart="true"
-            android:scaleType="fitCenter"
-            android:src="@drawable/lang_backing"
-            android:visibility="invisible" />
 
-        <ImageView
-            android:id="@+id/english_icon"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignBottom="@+id/english_background"
-            android:layout_alignEnd="@+id/english_background"
-            android:layout_alignStart="@+id/english_background"
-            android:layout_alignTop="@+id/english_background"
-            android:paddingTop="@dimen/margin_5"
-            android:scaleType="fitCenter"
-            android:src="@drawable/english" />
+    </base.app.util.ui.AutofitRecyclerView>
 
-        <TextView
-            android:id="@+id/english_caption"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignEnd="@+id/english_background"
-            android:layout_alignStart="@+id/english_background"
-            android:layout_below="@+id/english_background"
-            android:gravity="center"
-            android:text="@string/english"
-            android:textColor="@color/white" />
 
-        <ImageView
-            android:id="@+id/chinese_background"
-            android:layout_width="@dimen/popup_language_image_element_size"
-            android:layout_height="@dimen/popup_language_image_element_size"
-            android:layout_centerHorizontal="true"
-            android:scaleType="fitCenter"
-            android:src="@drawable/lang_backing"
-            android:visibility="invisible" />
-
-        <ImageView
-            android:id="@+id/chinese_icon"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignBottom="@+id/chinese_background"
-            android:layout_alignEnd="@+id/chinese_background"
-            android:layout_alignStart="@+id/chinese_background"
-            android:layout_alignTop="@+id/chinese_background"
-            android:paddingTop="@dimen/margin_5"
-            android:scaleType="fitCenter"
-            android:src="@drawable/chinese" />
-
-        <TextView
-            android:id="@+id/chinese_caption"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignEnd="@+id/chinese_background"
-            android:layout_alignStart="@+id/chinese_background"
-            android:layout_below="@+id/chinese_background"
-            android:gravity="center"
-            android:text="@string/chinese"
-            android:textColor="@color/white" />
-
-        <ImageView
-            android:id="@+id/portuguese_background"
-            android:layout_width="@dimen/popup_language_image_element_size"
-            android:layout_height="@dimen/popup_language_image_element_size"
-            android:layout_alignParentEnd="true"
-            android:scaleType="fitCenter"
-            android:src="@drawable/lang_backing"
-            android:visibility="invisible" />
-
-        <ImageView
-            android:id="@+id/portuguese_icon"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignBottom="@+id/portuguese_background"
-            android:layout_alignEnd="@+id/portuguese_background"
-            android:layout_alignStart="@+id/portuguese_background"
-            android:layout_alignTop="@+id/portuguese_background"
-            android:paddingTop="@dimen/margin_5"
-            android:scaleType="fitCenter"
-            android:src="@drawable/portuguese" />
-
-        <TextView
-            android:id="@+id/portuguese_caption"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignEnd="@+id/portuguese_background"
-            android:layout_alignStart="@+id/portuguese_background"
-            android:layout_below="@+id/portuguese_background"
-            android:gravity="center"
-            android:text="@string/portuguese"
-            android:textColor="@color/white" />
-
-    </RelativeLayout>
-
-    <!-- BOTTOM BUTTONS CONTAINER -->
-    <RelativeLayout
-        android:id="@+id/bottom_buttons_container"
-        android:layout_width="wrap_content"
-        android:layout_height="@dimen/popup_language_bottom_buttons_container_height"
-        android:layout_alignParentBottom="true"
-        android:background="@drawable/popup_bottom_background"
-        android:clickable="true">
-
-        <View
-            android:id="@+id/bottom_split_line"
-            android:layout_width="wrap_content"
-            android:layout_height="@dimen/height_1"
-            android:layout_alignParentEnd="true"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:background="@android:color/black" />
-
-        <ImageButton
-            android:id="@+id/confirm_button"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_alignParentEnd="true"
-            android:layout_centerVertical="true"
-            android:layout_marginBottom="@dimen/margin_30"
-            android:layout_marginEnd="@dimen/margin_10"
-            android:background="@null"
-            android:scaleType="centerInside"
-            android:src="?popupConfirmationButtonIcon" />
-    </RelativeLayout>
 </RelativeLayout>
