--- a/SportsSideKick/app/src/sportsidekick/res/values-hdpi/dimens.xml
+++ b/SportsSideKick/app/src/sportsidekick/res/values-hdpi/dimens.xml
@@ -12,6 +12,6 @@
     <dimen name="popup_friend_profil_progress_hex_bar_size">62dp</dimen>
     <dimen name="edit_profile_label_text_size">114dp</dimen>
     <dimen name="row_chat_bubble_user_size">50dp</dimen>
-
+    <dimen name="popup_language_image_element_size">64dp</dimen>
 
 </resources>
