--- a/SportsSideKick/app/src/sportsidekick/res/layout-large/popup_login_sing_up.xml
+++ b/SportsSideKick/app/src/sportsidekick/res/layout-large/popup_login_sing_up.xml
@@ -157,6 +157,6 @@
             android:background="@android:color/transparent"
             android:src="@drawable/ic_keyboard_arrow_left_black_24dp"
             android:tint="@color/light_colorPrimaryLight"
-            android:visibility="visible" />
+            android:visibility="gone" />
     </RelativeLayout>
 </RelativeLayout>
