--- a/SportsSideKick/app/src/sportsidekick/res/layout-large/popup_signup.xml
+++ b/SportsSideKick/app/src/sportsidekick/res/layout-large/popup_signup.xml
@@ -1,65 +1,245 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="@dimen/width_500"
-    android:layout_marginTop="@dimen/margin_base_size_60"
-    android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:clickable="true">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="?green_dark_1"
+    android:fitsSystemWindows="false"
+    android:clickable="true"
+    android:isScrollContainer="false">
 
-
-    <!-- TOP BUTTONS CONTAINER -->
-    <LinearLayout
-        android:id="@+id/top_buttons_container"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/standard_button_height"
+    <RelativeLayout
+        android:isScrollContainer="false"
+        android:fitsSystemWindows="false"
         android:layout_alignParentTop="true"
-        android:orientation="horizontal">
-
-        <TextView
-            android:id="@+id/sign_up_login_button"
-            android:layout_width="@dimen/space_0"
-            android:layout_height="match_parent"
-            android:layout_marginEnd="@dimen/margin_1"
-            android:layout_weight="1"
-            android:background="?colorAccentLight"
-            android:gravity="center"
-            android:text="@string/login_login"
-            android:textColor="?white_semitransparent" />
-
-        <TextView
-            android:id="@+id/your_wallet_button"
-            android:layout_width="@dimen/space_0"
-            android:layout_height="match_parent"
-            android:layout_marginEnd="@dimen/margin_1"
-            android:layout_weight="1"
-            android:background="?colorPrimarySemiLight"
-            android:gravity="center"
-            android:text="@string/login_sign_up"
-            android:textColor="?colorAccent" />
-
-    </LinearLayout>
-
-    <LinearLayout
+        android:layout_alignParentStart="true"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/height_2"
-        android:layout_alignParentTop="true"
-        android:orientation="horizontal">
+        android:layout_height="match_parent">
 
-        <View
+        <ImageView
+            android:fitsSystemWindows="false"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/height_2"
-            android:layout_marginEnd="@dimen/margin_1"
-            android:layout_weight="1"
-            android:background="?colorPrimaryLight" />
+            android:layout_height="match_parent"
+            android:background="@drawable/phone_background" />
 
-        <View
+
+        <ImageView
+            android:fitsSystemWindows="false"
+            android:id="@+id/image_player"
             android:layout_width="match_parent"
-            android:layout_height="@dimen/height_2"
-            android:layout_weight="1"
-            android:background="?colorAccent" />
-    </LinearLayout>
+            android:layout_height="match_parent"
+            android:alpha="0.4"
+            android:scaleType="centerCrop"
+            android:src="@drawable/video_chat_background" />
 
-    <!--  TOP SPLITTER-->
+
+    </RelativeLayout>
+
+
+
+    <RelativeLayout
+        android:isScrollContainer="true"
+        android:id="@+id/content_container"
+        android:layout_width="match_parent"
+
+        android:layout_height="match_parent"
+        android:fitsSystemWindows="true"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/top_split_line"
+        android:clickable="true">
+
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:orientation="vertical">
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="@dimen/margin_15"
+                android:orientation="horizontal">
+
+                <View
+                    android:layout_width="0dp"
+                    android:layout_height="0dp"
+                    android:layout_weight="0.33" />
+
+                <Button
+                    android:id="@+id/facebook_button"
+                    style="@style/facebook_login_button_phone"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="0.33"
+                    android:text="@string/join_with_facebook"
+                    android:textAllCaps="false"
+                    android:textColor="?white"
+                    android:textSize="@dimen/font_size_16" />
+
+                <View
+                    android:layout_width="0dp"
+                    android:layout_height="0dp"
+                    android:layout_weight="0.33" />
+            </LinearLayout>
+
+            <com.facebook.login.widget.LoginButton
+                android:id="@+id/sign_up_facebook"
+                style="@style/facebook_login_button_phone"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/join_with_facebook"
+                android:visibility="gone" />
+
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                    <View
+                        android:layout_width="0dp"
+                        android:layout_height="0dp"
+                        android:layout_weight="0.292" />
+
+                    <EditText
+                        android:id="@+id/sign_up_firstname"
+                        style="@style/edit_text_login_phone"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="0.196"
+                        android:hint="@string/sign_up_firstname"
+                        android:inputType="text"
+                        android:textSize="@dimen/font_size_15" />
+
+                    <View
+                        android:layout_width="0dp"
+                        android:layout_height="0dp"
+                        android:layout_weight="0.002" />
+
+                    <EditText
+                        android:id="@+id/sign_up_lastname"
+                        style="@style/edit_text_login_phone"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="0.196"
+                        android:hint="@string/sign_up_lastname"
+                        android:inputType="text"
+                        android:textSize="@dimen/font_size_15" />
+
+                    <View
+                        android:layout_width="0dp"
+                        android:layout_height="0dp"
+                        android:layout_weight="0.292" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                    <View
+                        android:layout_width="0dp"
+                        android:layout_height="0dp"
+                        android:layout_weight="0.292" />
+
+                    <EditText
+                        android:id="@+id/sign_up_email"
+                        style="@style/edit_text_login_phone"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="0.196"
+                        android:hint="@string/sign_up_email"
+                        android:inputType="text"
+                        android:textSize="@dimen/font_size_15" />
+
+                    <View
+                        android:layout_width="0dp"
+                        android:layout_height="0dp"
+                        android:layout_weight="0.002" />
+
+                    <EditText
+                        android:id="@+id/sign_up_password"
+                        style="@style/edit_text_login_phone"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="0.196"
+                        android:hint="@string/login_login_password"
+                        android:inputType="textPassword"
+                        android:textSize="@dimen/font_size_15" />
+
+                    <View
+                        android:layout_width="0dp"
+                        android:layout_height="0dp"
+                        android:layout_weight="0.292" />
+                </LinearLayout>
+
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/margin_15"
+                    android:orientation="horizontal">
+
+                    <View
+                        android:layout_width="0dp"
+                        android:layout_height="0dp"
+                        android:layout_weight="0.33" />
+
+                    <RelativeLayout
+                        android:id="@+id/bottom_buttons_container_sign_up"
+                        android:layout_width="0dp"
+                        android:layout_height="@dimen/standard_button_height"
+                        android:layout_weight="0.33"
+                        android:background="@drawable/button_login_login">
+
+                        <TextView
+                            android:id="@+id/sign_up_text"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_centerInParent="true"
+                            android:text="@string/join_now"
+                            android:textColor="@android:color/black"
+                            android:textSize="@dimen/font_size_18" />
+
+                        <com.wang.avi.AVLoadingIndicatorView
+                            android:id="@+id/sign_up_progress_bar"
+                            android:layout_width="@dimen/prodgres_bar"
+                            android:layout_height="@dimen/prodgres_bar"
+                            android:layout_centerInParent="true"
+                            android:elevation="@dimen/elevation_2"
+                            android:visibility="gone"
+                            app:indicatorName="LineSpinFadeLoaderIndicator" />
+
+                    </RelativeLayout>
+
+                    <View
+                        android:layout_width="0dp"
+                        android:layout_height="0dp"
+                        android:layout_weight="0.33" />
+                </LinearLayout>
+
+
+                <TextView
+                    android:id="@+id/politic_and_privacy_android"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="@dimen/margin_10"
+                    android:text="@string/sign_up_text"
+                    android:textAlignment="center"
+                    android:textColor="?white_semitransparent"
+                    android:textSize="@dimen/font_size_10" />
+            </LinearLayout>
+        </LinearLayout>
+
+
+    </RelativeLayout>
     <View
         android:id="@+id/top_split_line"
         android:layout_width="match_parent"
@@ -67,152 +247,43 @@
         android:layout_below="@+id/top_buttons_container"
         android:background="@color/colorPrimary" />
 
-    <!-- CONTENT CONTAINER -->
-
-
-    <!-- BOTTOM BUTTONS CONTAINER -->
     <RelativeLayout
-        android:id="@+id/bottom_buttons_container_sign_up"
+        android:id="@+id/top_buttons_container"
         android:layout_width="match_parent"
         android:layout_height="@dimen/standard_button_height"
         android:layout_alignParentStart="true"
-        android:layout_alignWithParentIfMissing="true"
-        android:layout_below="@+id/content_container"
-        android:background="@drawable/popup_login_button_background">
+        android:layout_alignParentTop="true"
+        android:orientation="horizontal">
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:alpha="0.7"
+            android:background="@color/green_dark_6" />
 
         <TextView
-            android:id="@+id/sign_up_text"
+            style="@style/boldText"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:layout_centerInParent="true"
-            android:text="@string/sign_up_sign_up"
-            android:textColor="@color/colorPrimary"
-            android:textSize="@dimen/font_size_18" />
+            android:layout_marginEnd="1dp"
+            android:gravity="center_vertical"
+            android:text="@string/join_now_sign_in"
+            android:textAllCaps="true"
+            android:textColor="?white"
+            android:textSize="@dimen/font_size_16"
+            android:textStyle="bold" />
 
-        <com.wang.avi.AVLoadingIndicatorView
-            android:id="@+id/sign_up_progress_bar"
-            android:layout_width="@dimen/prodgres_bar"
-            android:layout_height="@dimen/prodgres_bar"
-            android:elevation="@dimen/elevation_2"
-            app:indicatorName="LineSpinFadeLoaderIndicator"
-            android:layout_centerInParent="true"
-            android:visibility="gone"/>
-
-    </RelativeLayout>
-
-    <RelativeLayout
-        android:id="@+id/content_container"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="?colorPrimarySemiLight"
-        android:layout_below="@+id/top_split_line"
-        android:layout_alignParentStart="true"
-        android:clickable="true">
-
-        <LinearLayout
-            android:layout_width="@dimen/login_conteiner_width"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:layout_marginTop="@dimen/margin_40"
-            android:orientation="vertical">
-
-            <com.facebook.login.widget.LoginButton
-                android:id="@+id/sign_up_facebook"
-                style="@style/button_facebook"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:text="@string/sign_up_facebook" />
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:gravity="center_vertical"
-                android:layout_marginTop="@dimen/margin_20"
-                android:layout_marginBottom="@dimen/margin_20">
-
-                <View
-                    android:layout_width="@dimen/width_50"
-                    android:layout_height="@dimen/height_1"
-                    android:layout_weight="1"
-                    android:background="@color/colorPrimary" />
-
-                <TextView
-                    android:id="@+id/or_label"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:gravity="center"
-                    android:text="@string/sign_up_or"
-                    android:textColor="@color/white"/>
-
-                <View
-                    android:layout_width="@dimen/width_50"
-                    android:layout_height="@dimen/height_1"
-                    android:layout_weight="1"
-                    android:background="@color/colorPrimary" />
-
-            </LinearLayout>
-
-            <EditText
-                android:id="@+id/sign_up_firstname"
-                style="@style/edit_text_login"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="@string/sign_up_firstname"
-                android:inputType="text" />
-
-            <EditText
-                android:id="@+id/sign_up_lastname"
-                style="@style/edit_text_login"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="@string/sign_up_lastname"
-                android:inputType="text" />
-
-            <EditText
-                android:id="@+id/sign_up_display_name"
-                style="@style/edit_text_login"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="@string/sign_up_username"
-                android:inputType="text" />
-
-            <EditText
-                android:id="@+id/sign_up_email"
-                style="@style/edit_text_login"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="@string/sign_up_email"
-                android:inputType="text" />
-
-            <EditText
-                android:id="@+id/sign_up_phone"
-                style="@style/edit_text_login"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="@string/sign_up_phone"
-                android:inputType="phone" />
-
-            <EditText
-                android:id="@+id/sign_up_password"
-                style="@style/edit_text_login"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:hint="@string/login_login_password"
-                android:inputType="textPassword" />
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/margin_10"
-                android:text="@string/sign_up_text"
-                android:textAlignment="center"
-                android:textColor="?white_semitransparent"
-                android:textSize="@dimen/font_size_10" />
-
-        </LinearLayout>
-
+        <android.support.v7.widget.AppCompatImageButton
+            android:id="@+id/close_dialog_button"
+            android:layout_width="@dimen/standard_button_height"
+            android:layout_height="@dimen/standard_button_height"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:background="@android:color/transparent"
+            android:src="@drawable/ic_keyboard_arrow_left_black_24dp"
+            android:tint="@color/light_colorPrimaryLight"
+            android:visibility="gone" />
     </RelativeLayout>
 
 </RelativeLayout>
